--- a/package.xml
+++ b/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>ros2_collect</name>
+  <name>robosense_collect</name>
   <version>0.15.13</version>
   <description>Robosense ROS Collect Softeware</description>
   <maintainer email="swhe@robosense.cn">Michael Orlov</maintainer>
